# future-agi

./: .env.example  .gitignore  .lintstagedrc.cjs  .release-please-manifest.json  BRANCH_NAMING_CONVENTION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.oss  INSTALLATION.md  OBSERVE_TESTING_GUIDE.md  README.md  SMOKE_TEST_DELETE_ME.md  TESTING.md  USER_ID_FILTER_REFACTOR.md  dc.sh  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.yml  package.json  release-please-config.json
futureagi/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.falcon-e2e  Dockerfile.oss  Makefile  README.md  _ee_stubs.py  conftest.py  docker-compose.branch.yml  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.sdk-test.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  manage.py  mypy-baseline.txt  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
futureagi/.ci/: clickhouse-storage-policy.xml  clickhouse-test-config.xml
futureagi/.github/workflows/: pr-tests.yml
futureagi/accounts/: admin.py  apps.py  authentication.py  aws_marketplace_utils.py  urls.py  user_onboard.py  utils.py
futureagi/accounts/formal_tests/: conftest.py  pyproject.toml  test_rbac_hypothesis.py  test_rbac_z3.py
futureagi/accounts/middleware/: require_2fa.py
futureagi/accounts/migrations/: 0020_reseed_broken_demo_data.py  0020_user_last_timezone.py  0021_merge_20260526_0921.py  0022_backfill_ws_org_membership_fk.py  0022_onboarding_activation_event.py  0023_create_missing_org_memberships.py  0023_onboarding_goal.py  0024_onboarding_sample_project.py  0024_orgapikey_expires_at.py  0025_onboarding_lifecycle_dry_run.py  0026_onboardinglifecyclesendallowlist_and_more.py  0027_notificationchannel_notificationdeliverylog_and_more.py  0028_onboarding_quality_action.py  0029_onboarding_quality_action_due_at.py  0030_onboarding_paid_cloud_activation_export_log.py  0031_onboardingactivationfactreceipt_and_more.py  0032_onboardinglifecycleevaluationlog_source_receipt.py
futureagi/accounts/models/: __init__.py  onboarding.py  user.py  workspace.py
futureagi/accounts/serializers/: contracts.py  onboarding.py  onboarding_lifecycle_digest_review.py  onboarding_notifications.py  rbac.py  user.py  workspace.py
futureagi/accounts/services/: member_role_service.py  template_access.py  workspace_members.py  workspace_membership.py
futureagi/accounts/signals/: onboarding_project_signals.py
futureagi/accounts/templates/: reset_password.html
futureagi/accounts/tests/: onboarding_fixtures.py  onboarding_model_factories.py  test_2fa_enforcement.py  test_annotation_notifications.py  test_auth_rate_limit.py  test_authentication.py  test_config_endpoint.py  test_contract_serializers.py  test_create_organization.py  test_e2e_role_and_removal.py  test_empty_request_contracts.py  test_exception_handler.py  test_invite_email_failure.py  test_keys.py  test_login_deactivated.py  test_login_error_codes.py  test_member_removal.py  test_multi_org_auth.py  test_multi_org_endpoints.py  test_onboarding_activation_event_api.py  test_onboarding_activation_events.py  test_onboarding_activation_exporter.py  test_onboarding_activation_fact_lifecycle.py  test_onboarding_activation_fact_receipts.py  test_onboarding_activation_pipeline_report.py  test_onboarding_activation_state.py  test_onboarding_agent_activation_state.py  test_onboarding_agent_lifecycle.py  test_onboarding_analytics_quality.py  test_onboarding_api.py  test_onboarding_cloud_runtime.py  test_onboarding_daily_quality.py  test_onboarding_eval_activation_state.py  test_onboarding_eval_lifecycle.py  test_onboarding_flow_config_contract.py  test_onboarding_gateway_activation_state.py  test_onboarding_gateway_lifecycle.py  test_onboarding_goals.py  test_onboarding_lifecycle_clicks.py  test_onboarding_lifecycle_digest_review.py  (+46 more)
futureagi/accounts/views/: annotation_notifications.py  appsmith.py  aws_marketplace.py  config.py  keys.py  onboarding.py  onboarding_lifecycle_clicks.py  onboarding_lifecycle_digest_review.py  onboarding_lifecycle_preferences.py  onboarding_notifications.py  organization_selection.py  organization_views.py  rbac_views.py  signup.py  two_factor_views.py  user.py  webauthn_views.py  workspace.py  workspace_management.py
futureagi/agent_playground/: urls.py
futureagi/agent_playground/formal_tests/: test_composition_hypothesis.py  test_composition_z3.py  test_template_composition_integration.py
futureagi/agent_playground/migrations/: 0012_graph_template_tags.py  0012_seed_code_execution_template.py
futureagi/agent_playground/models/: graph.py
futureagi/agentcc/: db_routing.py  org_config_defaults.py
futureagi/agentcc-gateway/: go.mod  go.sum
futureagi/agentic_eval/: Makefile  SPEC.md
futureagi/ai_tools/: authz.py  base.py  confirmations.py  drf_bridge.py  error_codes.py  formatting.py  registry.py  resolvers.py  serializers.py  tool_aliases.py  views.py
futureagi/analytics/: posthog_util.py  utils.py
futureagi/code-executor/: Dockerfile  server.py  test_server.py
futureagi/common/: resource_manager.py
futureagi/docs/: CH25_MIGRATION.md  E2E_TESTS.md  reproducibility_passports.md
futureagi/evaluations/: SPEC.md  constants.py
futureagi/mcp_server/: constants.py  mcp_app.py  org_resolution.py  throttles.py  usage_helpers.py
futureagi/model_hub/: SPEC.md  apps.py  constants.py  db_routing.py  types.py  urls.py
futureagi/model_serving/: entrypoint.sh  pyproject.toml  requirements.txt
futureagi/saml2_auth/: serializers.py  views.py
futureagi/scripts/: peerdb-setup-mirrors.sh  populate_session_test_data.py  run-e2e.sh  verify_providers_live.py
futureagi/simulate/: README.md  SPEC.md  semantics.py  urls.py
futureagi/sockets/: consumer.py  prompt_stream_consumer.py  workspace_access.py
futureagi/tfc/: ee_gates.py  ee_gating.py  ee_stub.py  routers.py  urls.py
futureagi/tracer/: SPEC.md  apps.py  db_routing.py  ee_boundary.py  otel_compat_urls.py  selectors.py  socket.py  tasks.py  urls.py
(+4526 files in other folders)
